Fix edge-case flickering bug

--- a/src/demo/style.styl
+++ b/src/demo/style.styl
@@ -102,6 +102,7 @@ ol.tree
         
         &:empty
           margin-top -1px
+          pointer-events none
 
   li.group.collapsed
     > .toggle
